name:                xml-map
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura
-- maintainer:          
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Main
  -- other-modules:       
  -- other-extensions:    
  -- hs-source-dirs:      
  default-language:    Haskell2010
  build-depends:       base ==4.*
                     , unordered-containers
                     , xml
